# (r902)
 * introduced 'list "mark"' and 'list "unmark"' syntax styled as 'limit'
 * load i:_comment and i:var from description file, with forms:
   "filename comment" (to i:_comment),
   "#!fim:var=value" (to   set i:var=value on all all the files following)
   "#!fim:var="      (to unset i:var=value on all all the files following)
# (r654*)
# (r675*)
 * EXIF tags will be read with libexif and become i:EXIF_-prefixed variables
# (r769!,805*)
 * if _want_exif_orientation is set, images will be reoriented according to EXIF
   metadata (i:__exif_orientation, i:__exif_mirrored, i:__exif_flipped).
# (r791*)
 * the 'help' command will search also in fim command options
 * will optionally use C++11 constructs with ./configure --enable-cxx11 (no user level impact)
 * scaling image code faster (thanks to __restrict__ pointers)
# (r648*)
 * customizable SDL window caption line with _want_caption_status
# (r664*)
 * BMP format support is now optional
# (r666*)
 * PCX format support (optional)
# (r671*)
 * changed meaning of variable _ignorecase: now it affects autocommands
# (r671*)
 * introduced variable _re_search_opts affecting regexp-based search
 * default key 'r' is bound to 'rotate90', key 'R' to 'rotate270'
 * can be invoked without stdin; e.g. from an X menu
 * added "display 'resize'" to resize the SDL window, eventually to image size
# (r698) (not mentioned in the docs)
 * default SDL mode is windowed now
# (r698)
 * by default, the 'C-w' key will resize the SDL window to the original image size
# (r698)
 * by default, the 'W' key will resize the SDL window to the image size,
# (r703)
   and added an --autowindow switch to adapt window size to picture size
 * the 'help' command will search in help items if argument starts with /
# (r724)
 * special variable i:* expanding to all the variable name/value pairs of the current image
# (experimental, incomplete; TODO: r665)
 * opening image files in archives with libarchive (experimental)
# (r660)