@@ -45,6 +45,7 @@
    "filename comment" (to i:_comment),
    "#!fim:var=value" (to   set i:var=value on all all the files following)
    "#!fim:var="      (to unset i:var=value on all all the files following)
+   "filename #!fim=" (to i:_comment from the value read last)
 # (r654*)
 # (r675*)
  * EXIF tags will be read with libexif and become i:EXIF_-prefixed variables
